--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/BoxEndLogo1.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#8b26eb" />
+    <meta name="theme-color" content="#4feb34" />
     <meta
       name="description"
       content="example app creator with react "
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>App Saz</title>
+    <title>عطار خونه</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
